--- a/Hidden/package.json
+++ b/Hidden/package.json
@@ -46,7 +46,7 @@
     "build": "npm run build-custom-three && grunt"
   },
   "dependencies": {
-    "three": "^0.89.0"
+    "grunt": ">=1.3.0"
   },
   "devDependencies": {
     "browserify": "^15.2.0",
