--- a/Hidden/package.json
+++ b/Hidden/package.json
@@ -50,7 +50,7 @@
   },
   "devDependencies": {
     "browserify": "^15.2.0",
-    "grunt": "^0.4.0",
+    "grunt": ">=1.3.0",
     "grunt-closure-tools": "^0.9.0",
     "grunt-contrib-concat": "^0.4.0",
     "grunt-contrib-jshint": "^0.10.0",
